--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,10 +1,12 @@
 .list {
   padding-top: 30px;
+  padding-bottom: 30px;
   display: flex;
   list-style: none;
   width: 100%;
   gap: 5px;
   width: 350px;
+  margin: 0 auto;
 }
 
 .card {
